edited, fixed bib

--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,7 @@
 \input{./confs/tweaks}
 
 \input{./tex/pretext/details}
-% \makeindex
+\makeindex
 \begin{document}
   %\maketitle
   %pretextual area 
@@ -24,7 +24,8 @@
 	  \include{./tex/autoridade}
 	  \include{./tex/conclusoes}
   %bibliography
-	  \bibliographystyle{abbrvnat}
+	  %\bibliographystyle{abbrvnat}
+	  \bibliographystyle{unsrtnat}
 	  \bibliography{bibdatabase}
 
   %body of appendices
