--- a/tex/copulas.tex
+++ b/tex/copulas.tex
@@ -113,8 +113,12 @@ Essa definição implica que a densidade de probabilidade conjunta das variávei
 \label{eq:density}
  p_{XY}(x,y) = c(F_X(x), F_Y(y)) p_X(x) p_Y(y)
 \end{equation}
-\textbf{dá para explicar isso melhor}
-O teorema de Sklar permite dividir a informação contida na distribuição conjunta em duas partes: a parte que diz respeito às propriedades de cada uma das variáveis, dada pelas distribuições marginais, e a parte que diz respeito à dependência estatística entre as duas variáveis.
+Dessa forma, o teorema de Sklar permite dividir a informação contida na distribuição conjunta em duas partes: 
+\begin{itemize}
+ \item uma parte que diz respeito apenas às propriedades de cada uma das variáveis -- que é dada pelas distribuições marginais;
+ \item e uma parte que diz respeito à dependência estatística entre as duas variáveis -- que é dada pela função cópula. 
+\end{itemize}
+ 
 \subsection{Exemplos}
 \label{sec:exemplos}
 \newthought{Como exemplos de funções cópula} temos as cópulas associadas às distribuições multivariadas mais comumente utilizadas. Qualquer família de distribuições multivariadas  com um conjunto de parâmetros $\theta$ dada por $p(x,y |\theta)$ define uma função cópula dada por:
